site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vera-site
  namespace: vera
spec:
  selector: { app: vera-site }
  ports:
    - port: 80
      targetPort: 80
